tests/errors/ambiguous_mutation.dang
# Test that bare Mutation is ambiguous when multiple imports provide it

import Test
import Other

# This should fail because both Test and Other provide Mutation
let deleted = Mutation.deleteUser(id: "99")
